add notification close button hover effects

--- a/draft/notifications/notification.css
+++ b/draft/notifications/notification.css
@@ -123,7 +123,7 @@ v-notification button.close{
 	width: 36px;
 	height: 36px;
 
-	background: #1F1F1F;
+	background-color: #1F1F1F;
 	border: 1px solid #282828;
 	border-radius: 34px;
 
@@ -139,7 +139,26 @@ v-notification button.close{
 	position: absolute;
 	top: 12px;
 	left: 12px;
+
+	transition: 400ms;
 }
+v-notification button.close:hover{
+	background-color: #2f2f2f;
+/*	box-shadow: 0 0px 10px #ffffff16;*/
+	transform: scale(0.98);
+
+	/*
+	!!!not here. so unnoticable
+	transform: 
+	rotateX(35deg)
+	rotateY(-185deg)
+	rotateZ(35deg)*/
+/*	translateX(-5px)*/
+	;
+
+
+}
+
 
 /*
 another place
