add dummy version of content showing

--- a/src/views/dashboard/mytree.css
+++ b/src/views/dashboard/mytree.css
@@ -57,6 +57,7 @@ have any idea for this part. so I'll just use dashboard as tree/details page*/
 
 .mytree{
 	padding-top: 70px;
+	padding-bottom: 50vh;
 }
 
 .treeRow{
