--- a/src/views/dashboard/mytree.css
+++ b/src/views/dashboard/mytree.css
@@ -28,7 +28,11 @@ have any idea for this part. so I'll just use dashboard as tree/details page*/
 /*	height: calc(100vh - 320px);*/
 
 	top: 80px;
-	height: calc(100vh - 80px);
+
+
+	max-height: calc(100vh - 80px);
+
+
 /*	background-color: red;*/
 	flex: 1;
 /*	padding-left: 100px;*/
@@ -69,8 +73,13 @@ have any idea for this part. so I'll just use dashboard as tree/details page*/
 }
 
 .treeRow > .treeTitle {
-	padding-top: 130px;
-	width: 150px;
+/*	padding-top: 130px;*/
+	min-height: 300px;
+	display: flex;
+	align-items: center;
+
+
+	width: 250px;
 
 	font-family: 'Open Sans';
 	font-style: normal;
@@ -81,9 +90,17 @@ have any idea for this part. so I'll just use dashboard as tree/details page*/
 
 }
 .treeRow > .treeDesc {
-	padding-top: 130px;
+/*	padding-top: 130px;
 	padding-bottom: 130px;
+*/
+/*	min-height: 300px;
+	display: flex;
+	align-items: center;
+*/
+	display: flex;
+	align-items: center;
 
+	
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 400;
@@ -120,7 +137,34 @@ have any idea for this part. so I'll just use dashboard as tree/details page*/
 	box-shadow: 0 0 100px 30px #6E5ED0;
 }
 
-.texty.loading {
-	background-color: green !important;
+.texty > .shady-scroller{
+	flex: 1;
+	transition: all 600ms;
+	border-radius: 13px;
+	box-shadow: 0 0 0 0 #6660;
 }
+
+.texty.loading > .shady-scroller {
+	box-shadow: 0 0 0 1px #666;
+	background-color: #eeeeee04;
+	transform: scale(0.99);
+}
+
+.texty > .shady-scroller:before,
+.texty > .shady-scroller:after{
+	transition: inherit;
+	opacity: 1;
+}
+
+.texty.loading > .shady-scroller:before,
+.texty.loading > .shady-scroller:after{
+	opacity: 0;
+}
+
+.texty{
+	display: flex;
+	align-items: flex-start;
+	justify-content: flex-start;
+}
+
 
