--- a/src/views/projects/projects.css
+++ b/src/views/projects/projects.css
@@ -4,17 +4,30 @@ v-projects{
 
 	/* is required to keep position fixed inside the scroll bars */
 	transform: scale(1.0);
-	animation: opacityAnim 500ms;
+	animation: opacityInAnim 500ms;
 	background: radial-gradient(206.72% 262.32% at -60.65% -106.72%, #000000 0%, rgba(0, 0, 0, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, linear-gradient(71.39deg, rgba(17, 50, 166, 0.2) -32.95%, rgba(0, 0, 0, 0) 50.96%), radial-gradient(204.02% 204.02% at 83.17% 259.01%, #9000B1 0%, rgba(0, 0, 0, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #1A1A1A;
 }
 
-@keyframes opacityAnim{
+@keyframes opacityInAnim{
 	from{
 		opacity: 0;
 	}
 	to{
 		opacity: 1;
 	}
+}
+
+@keyframes opacityOutAnim{
+	from{
+		opacity: 1;
+	}
+	to{
+		opacity: 0;
+	}
+}
+
+v-projects.close{
+	animation: opacityOutAnim 500ms forwards;
 }
 
 v-projects .content{
