move impact behind the sidebar; now no impact on projects

--- a/src/features/impact.css
+++ b/src/features/impact.css
@@ -1,6 +1,6 @@
 #impactHolder {
 	position: relative;
-	z-index: 999999999;
+	z-index: 	z-index: 904;
 	transform: scale(1.0);
 	pointer-events: none;
 }
