lower opacity of selection bg

--- a/src/style/selection.css
+++ b/src/style/selection.css
@@ -1,9 +1,9 @@
 ::-moz-selection { /* Code for Firefox */
   color: #ddd;
-  background: #333;
+  background: #fff3;
 }
 
 ::selection {
   color: #ddd;
-  background: #333;
+  background: #fff3;
 }
