--- a/src/views/dashboard/mytree.css
+++ b/src/views/dashboard/mytree.css
@@ -42,10 +42,11 @@ have any idea for this part. so I'll just use dashboard as tree/details page*/
 	margin-left: 0px;
 }
 .mytree{
-	z-index: 900;
+	z-index: 90;
 }
 
 .split2col{
+	z-index: 9;
 	display: flex;
 	flex-direction: row;
 }
@@ -108,6 +109,7 @@ have any idea for this part. so I'll just use dashboard as tree/details page*/
 }
 
 .texty a {
+	z-index: 903;
 	color: #6e5ed0;
 	text-decoration: none;
 
@@ -163,15 +165,54 @@ have any idea for this part. so I'll just use dashboard as tree/details page*/
 	box-shadow: 0 0 100px 30px #6E5ED0;
 }
 
-.texty > .shady-scroller{
+.texty > .scroll-content{
+	max-height: 100%;
+	widows: 200px;
+	overflow-y: auto;
+	margin-right: 5px;
+
+	/* Text */
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 110%;
+
+	padding: 40px;
+}
+.scroll-content::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+.scroll-content::-webkit-scrollbar-track {
+  background: 0000;
+}
+
+/* Handle */
+.scroll-content::-webkit-scrollbar-thumb {
+  background: #2e2e2e;
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+.scroll-content::-webkit-scrollbar-thumb:hover {
+  background: #444;
+}
+
+
+
+.texty > .shady-scroller,
+.texty > .scroll-content{
 	flex: 1;
 	transition: all 800ms;
 	border-radius: 13px;
 	box-shadow: 0 0 0 0 #6660;
-	padding-left: 30px;
+/*	padding-left: 30px;*/
 	max-height: 80%;
 }
 
+.texty.loading > .scroll-content,
 .texty.loading > .shady-scroller {
 	box-shadow: 0 0 0 1px #6E5ED0
 /*	,0 0 90px -50px #dcd7f4*/
