--- a/src/sidebar/content.css
+++ b/src/sidebar/content.css
@@ -1,5 +1,7 @@
 #content{
-	background-color: transparent;
+/*	background-color: transparent;*/
+	background: radial-gradient(206.72% 262.32% at -60.65% -106.72%, #000000 0%, rgba(0, 0, 0, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, linear-gradient(71.39deg, rgba(17, 50, 166, 0.2) -32.95%, rgba(0, 0, 0, 0) 50.96%), radial-gradient(204.02% 204.02% at 83.17% 259.01%, #9000B1 0%, rgba(0, 0, 0, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #1A1A1A;
+
 	color: #ededed;
 	height: 100vh;
 /*	width: calc(100% - 80px);*/
