--- a/src/views/dashboard/mytree.css
+++ b/src/views/dashboard/mytree.css
@@ -168,7 +168,7 @@ have any idea for this part. so I'll just use dashboard as tree/details page*/
 	margin-bottom: 22px;
 	margin-top: 22px;
 	transform: translateX(-50%);
-	background-color: #1a1a1a;
+	background-color: #151515;
 	border: 1px solid #6E5ED0;
 	border-radius: 50%;
 	width: 25px;
