--- a/src/views/projects/projects.css
+++ b/src/views/projects/projects.css
@@ -1,54 +1,36 @@
 v-projects{
 	font-size: 26px;
 	font-family: 'Open Sans';
-
-	/* is required to keep position fixed inside the scroll bars */
-	transform: scale(1.0);
-	animation: opacityInAnim 500ms;
-	background: radial-gradient(206.72% 262.32% at -60.65% -106.72%, #000000 0%, rgba(0, 0, 0, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, linear-gradient(71.39deg, rgba(17, 50, 166, 0.2) -32.95%, rgba(0, 0, 0, 0) 50.96%), radial-gradient(204.02% 204.02% at 83.17% 259.01%, #9000B1 0%, rgba(0, 0, 0, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #1A1A1A;
 }
 
-@keyframes opacityInAnim{
-	from{
-		opacity: 0;
-	}
-	to{
-		opacity: 1;
-	}
+v-projects .wrapper{
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	flex-direction: row;
 }
 
-@keyframes opacityOutAnim{
-	from{
-		opacity: 1;
-	}
-	to{
-		opacity: 0;
-	}
+v-projects .skills {
+	width: 400px;
+	padding: 14px;
 }
 
-v-projects.close{
-	animation: opacityOutAnim 500ms forwards;
+v-projects .projectsScroll {
+	flex: 1;
 }
 
-v-projects .content{
-}
-
-v-projects .bg{
-/*	position: sticky;*/
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: calc(100% - 5px);
-	z-index: 8;
+v-projects .projectsScroll {
 	height: 100%;
+	overflow-y: scroll;
 }
 
-v-projects .content{
-	padding: 70px;
-	z-index: 9;
+.projects{
 }
 
-v-projects a{
-	color: #aaf;
-	text-decoration: none;
+.activeSkills{
+/*	position: absolute;*/
+/*	width: 100%;*/
+	padding: 7px;
+	position: sticky;
+	top: 0;
 }
