fix big font on v-buttons

--- a/src/views/projects/projects.css
+++ b/src/views/projects/projects.css
@@ -1,6 +1,10 @@
 v-projects{
-	font-size: 26px;
+/*	font-size: 26px;*/
 	font-family: 'Open Sans';
+}
+
+v-projects v-button{
+	font-size: 15px;
 }
 
 v-projects .wrapper{
