move custom scrollbars for attribute selectors; better structure p;rojects

--- a/src/style/scrollbars.css
+++ b/src/style/scrollbars.css
@@ -1,26 +1,53 @@
 /* width */
+*[scrolly]::-webkit-scrollbar,
 #content > *::-webkit-scrollbar {
   width: 11px;
 }
 
 /* Track */
+*[scrolly]::-webkit-scrollbar-track,
 #content > *::-webkit-scrollbar-track {
   background: #1a1a1a00;
 }
 
 /* Handle */
+*[scrolly]::-webkit-scrollbar-thumb,
 #content > *::-webkit-scrollbar-thumb {
 /*	border-radius: 50px;*/
 	background: #333;
 }
 
 /* Handle on hover */
+*[scrolly]::-webkit-scrollbar-thumb:hover,
 #content > *::-webkit-scrollbar-thumb:hover {
 	background: #444;
 }
 
+*[scrolly]::-webkit-scrollbar-thumb:active,
 #content > *::-webkit-scrollbar-thumb:active {
 /*	background: #888;*/
 	background: hsl(248deg, 35%, 53%);
+}
+
+
+
+*[scrolly2]::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+*[scrolly2]::-webkit-scrollbar-track {
+  background: 0000;
+}
+
+/* Handle */
+*[scrolly2]::-webkit-scrollbar-thumb {
+  background: #2e2e2e;
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+*[scrolly2]::-webkit-scrollbar-thumb:hover {
+  background: #444;
 }
 
