--- a/src/views/projects/projects.css
+++ b/src/views/projects/projects.css
@@ -16,7 +16,9 @@ v-projects .wrapper{
 
 v-projects .skills {
 	width: 400px;
+	margin-right: 4px;
 	padding: 14px;
+	overflow-y: scroll;
 }
 
 v-projects .projectsScroll {
@@ -28,13 +30,44 @@ v-projects .projectsScroll {
 	overflow-y: scroll;
 }
 
-.projects{
+.projectsScroll{
+	border-left: 1px solid #eee6;
+	background-color: #0008;
 }
 
 .activeSkills{
-/*	position: absolute;*/
-/*	width: 100%;*/
 	padding: 7px;
 	position: sticky;
-	top: 0;
+	top: 0px;
+	background-color: #0004;
+	border-bottom: 1px solid #eee6;
+	display: flex;
+	align-items: center;
+	flex-direction: 100%;
+	height: 80px;
+}
+
+
+v-button[active]{
+	filter: hue-rotate(31deg);
+}
+
+
+v-projects .activeSkills{
+	z-index: 7;
+}
+
+v-projects .projects .list:first-child > .title{
+	margin-top: 0;
+}
+
+v-projects .projects .list > .title{
+/*	box-shadow: 20px 7px 8px black inset;*/
+	background: linear-gradient(to right, #000a 0%, transparent 100%);
+	position: sticky;
+	top: 80px;
+/*	background-color: #0004;*/
+	padding: 3px;
+	margin-top: 24px;
+	z-index: 6;
 }
