add basic project style with picture

--- a/src/views/projects/projects.css
+++ b/src/views/projects/projects.css
@@ -81,7 +81,7 @@ v-projects .projects .list > .title{
 	padding: 32px 19px 32px 32px;
 	gap: 24px;
 
-	height: 449px;
+/*	height: 449px;*/
 	margin: 28px 32px;
 
 	background: rgba(255, 255, 255, 0.015);
@@ -106,11 +106,45 @@ v-projects .projects .list > .title{
 	font-family: 'Josefin Sans';
 	font-style: normal;
 	font-weight: 700;
-	font-size: 36px;
+	font-size: 38px;
 	line-height: 110%;
 	/* or 40px */
 
 
-	color: #FFFFFF;
+	color: #ededed;
+
+}
+
+.project .headline{
+	font-family: 'Josefin Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 26px;
+	line-height: 110%;
+	/* or 39px */
+}
+
+
+.project .content {
+	display: flex;
+	flex-direction: row;
+	gap: 17px;
+}
+
+.project .content .imgs{
+	display: flex;
+	height: 200px;
+}
+
+.project .content .imgs > *{
+	width: 300px;
+	padding: 30px;
+	border-radius: 8px;
+	transition: 540ms;
+}
+
+.project:hover .content .imgs > *{
+/*	transform: scale(1.005);*/
+	border-radius: 14px;
 
 }
